add main разметка main-columh-right for изменения height

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,9 +23,6 @@ a {
   padding: 10px;
   background: #00cc00;*/
 }
-.rrr {
-  border: green 1px solid;
-}
 .header-content {
   background: #0b2e13;
   border: red 1px solid;
@@ -47,15 +44,20 @@ a {
     margin-right: 0;
   }
 }
-.nnn {
-  height: 100px;
+.main-column-left {
+  width: 150px;
+  height: auto;
   border: red 1px solid;
+  margin-right: 15px;
+}
+.main-column-right {
+  border: red 1px solid;
+  height: auto;
   display: inline-block;
 }
-.ddd {
-  height: 50px;
-  width: 100px;
-  border: black 1px solid;
-  float: left;
+.main-img {
+  width: 140px;
+  height: 140px;
+  border: #00cc00 1px solid;
 }
 /*# sourceMappingURL=styles.css.map */
