--- a/css/styles.less
+++ b/css/styles.less
@@ -43,16 +43,21 @@ a {
     margin-right: 0;
   }
 }
-.nnn {
-  height: 100px;
+.main-column-left {
+  width: 150px;
+  height: auto;
   border: red 1px solid;
+  margin-right: 15px;
+}
+.main-column-right {
+   border: red 1px solid;
+  height: auto;
   display: inline-block;
 }
-.ddd {
-  height: 50px;
-  width: 100px;
-  border: black 1px solid;
-  float: left;
+.main-img {
+  width: 140px;
+  height: 140px;
+  border: #00cc00 1px solid;
 }
 
 
