--- a/css/styles.less
+++ b/css/styles.less
@@ -10,13 +10,18 @@ a {
 * {
   cursor: default;
 }
+.background-1 {
+  background: dimgray;
+}
+.background-2 {
+  background: darkgrey;
+}
 .container {
   max-width: 960px;
   margin: 0 auto;
    border: #00ccff 1px solid;
 }
 .header-content {
-  background: #0b2e13;
   border: red 1px solid;
   margin-right: 15px;
   height: 140px;
@@ -34,13 +39,22 @@ a {
     margin-right: 0;
   }
 }
+.header-img, .main-img-img, .footer-img  {
+  display: block;
+          width: 100%;
+          height: 100%;
+  @media (max-width: 576px){
+    height: 250px;
+  }
+
+}
 .main-column-left {
   width: 150px;
   height: auto;
   border: red 1px solid;
   margin-right: 15px;
   @media (max-width: 576px){
-    height: 100px;
+    height: auto;
     margin-right: 0;
   }
 }
@@ -64,6 +78,7 @@ a {
   @media (max-width: 576px){
     width: 100%;
     margin-bottom: 15px;
+    position: relative!important;
   }
 }
 .main-column-left-bottom {
@@ -74,6 +89,7 @@ a {
    @media (max-width: 576px){
     width: 100%;
      margin-bottom: 15px;
+     position: relative!important;
   }
 }
 .main-img-container {
@@ -98,6 +114,26 @@ a {
   }
   @media (max-width: 576px){
     margin-bottom: 15px;
+  }
+}
+.footer-container {
+  border: #17a2b8 1px solid;
+  height: 150px;
+  margin-bottom: 15px;
+}
+.footer-content-big {
+  height: 150px;
+}
+.footer-container-small {
+  border: red 1px solid;
+  margin-bottom: 15px;
+}
+.footer-content-small {
+  height: 67.5px;
+}
+.content-img {
+  @media (max-width: 576px){
+    height: 250px;
   }
 }
 
