--- a/css/styles.less
+++ b/css/styles.less
@@ -19,7 +19,7 @@ a {
 .container {
   max-width: 960px;
   margin: 0 auto;
-   border: #00ccff 1px solid;
+  border: #00ccff 1px solid;
 }
 .header-content {
   border: red 1px solid;
@@ -41,17 +41,20 @@ a {
 }
 .header-img, .main-img-img, .footer-img  {
   display: block;
-          width: 100%;
-          height: 100%;
+  width: 100%;
+  height: 100%;
   @media (max-width: 576px){
     height: 250px;
   }
 
 }
+.main-container {
+  padding-right: 0;
+}
 .main-column-left {
   width: 150px;
   height: auto;
-  border: red 1px solid;
+  border: yellow 1px solid;
   margin-right: 15px;
   @media (max-width: 576px){
     height: auto;
@@ -59,7 +62,7 @@ a {
   }
 }
 .main-column-right {
-   border: red 1px solid;
+  border: red 1px solid;
   height: auto;
   display: inline-block;
 }
@@ -68,17 +71,21 @@ a {
   height: 140px;
   border: #00cc00 1px solid;
   margin-bottom: 15px;
-  margin-top: 15px;
+  margin-right: 15px;
+  img {
+    width: 140px;
+    height: 140px;
+  }
 }
 .main-column-left-top {
   width: 150px;
   height: 250px;
-  border: orangered 1px solid;
+  border: red 1px solid;
   top: 0;
-  @media (max-width: 576px){
+  @media (max-width: 992px){
     width: 100%;
     margin-bottom: 15px;
-    position: relative!important;
+
   }
 }
 .main-column-left-bottom {
@@ -86,20 +93,30 @@ a {
   height: 100px;
   border: #0c5460 1px solid;
   bottom: 0;
-   @media (max-width: 576px){
+  @media (max-width: 992px){
     width: 100%;
-     margin-bottom: 15px;
-     position: relative!important;
+    margin-bottom: 15px;
+    position: relative!important;
+  }
+  @media(max-width: 576px){
+    padding-right: 15px;
   }
 }
 .main-img-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   flex-wrap: wrap;
+  @media (max-width: 768px){
+    justify-content: space-between;
+  }
+}
+.hhh {
+  margin-top: 15px;
 }
 .big {
   border: #0c5460 1px solid;
   height: 180px;
+  margin-right: 15px;
 }
 .small-margin-right {
   margin-right: 5px;
@@ -107,6 +124,7 @@ a {
 .main-column-right-end-content, .main-column-right-end-content-margin {
   height: 180px;
   border: #00cc00 1px solid;
+  margin-right: 15px;
 }
 .main-column-right-end-content-margin {
   @media (min-width: 576px){
@@ -136,4 +154,17 @@ a {
     height: 250px;
   }
 }
+.header-opacity {
+  position: fixed;
+  z-index: 5;
+  top: 10%;
+  left: 30%;
+  img {
+    width: 500px;
+    height: 500px;
+    opacity: 1;
+    background: none;
+  }
+}
+
 
