--- a/css/styles.less
+++ b/css/styles.less
@@ -50,6 +50,7 @@ a {
 }
 .main-container {
   padding-right: 0;
+  position: relative;
 }
 .main-column-left {
   width: 150px;
@@ -67,6 +68,7 @@ a {
   display: inline-block;
 }
 .main-img {
+  position: relative;
   width: 140px;
   height: 140px;
   border: #00cc00 1px solid;
@@ -76,6 +78,12 @@ a {
     width: 140px;
     height: 140px;
   }
+}
+.main-img-btn {
+  position: absolute;
+  width: 35px;
+  height: 15px;
+  background: red;
 }
 .main-column-left-top {
   width: 150px;
@@ -165,6 +173,33 @@ a {
     opacity: 1;
     background: none;
   }
+}
+.modalDialog {
+  position: fixed;
+  top: 100px;
+  left: 100px;
+  right: 100px;
+  bottom: 100px;
+  z-index: 999;
+  display: none;
+  pointer-events: none;
+}
+.modalDialog:target {
+  display: block;
+  pointer-events: auto;
+
+}
+.modalDialog > div {
+  width: 100px;
+  position: relative;
+}
+.body-modal {
+
+  background: gray;
+
+}
+.body-modal-none {
+  background: none;
 }
 
 
