--- a/css/styles.less
+++ b/css/styles.less
@@ -176,9 +176,9 @@ a {
 }
 .modalDialog {
   position: fixed;
-  top: 100px;
-  left: 100px;
-  right: 100px;
+  top: 25%;
+  left: 25%;
+  right: 25%;
   bottom: 100px;
   z-index: 999;
   display: none;
