--- a/css/styles.less
+++ b/css/styles.less
@@ -117,6 +117,9 @@ a {
   @media (max-width: 768px){
     justify-content: space-between;
   }
+  @media(max-width: 576px){
+    justify-content: center;
+  }
 }
 .hhh {
   margin-top: 15px;
@@ -176,13 +179,23 @@ a {
 }
 .modalDialog {
   position: fixed;
-  top: 25%;
-  left: 25%;
-  right: 25%;
-  bottom: 100px;
+  top: 50%;
+  left: 50%;
+  margin-left: -250px;
+  margin-top: -250px;
   z-index: 999;
   display: none;
   pointer-events: none;
+  @media(max-width: 576px){
+      margin-left: -150px;
+      margin-top: -150px;
+    }
+  img {
+    width: 500px;
+    @media(max-width: 576px){
+      width: 300px;
+    }
+  }
 }
 .modalDialog:target {
   display: block;
