--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,19 @@ a {
     margin-bottom: 15px;
   }
 }
+@media (max-width: 576px) {
+  .main-column-left-top {
+    padding-right: 15px;
+    background: none;
+  }
+}
+@media (max-width: 576px) {
+  .main-column-left-top-background {
+    background: dimgray;
+    width: 100%;
+    height: 250px;
+  }
+}
 .main-column-left-bottom {
   width: 150px;
   height: 100px;
@@ -115,13 +128,13 @@ a {
 @media (max-width: 992px) {
   .main-column-left-bottom {
     width: 100%;
-    margin-bottom: 15px;
-    position: relative!important;
   }
 }
 @media (max-width: 576px) {
   .main-column-left-bottom {
     padding-right: 15px;
+    margin-bottom: 15px;
+    position: relative!important;
   }
 }
 .main-img-container {
@@ -174,12 +187,33 @@ a {
 .footer-content-big {
   height: 150px;
 }
-.footer-container-small {
+.footer-content-small {
   border: red 1px solid;
   margin-bottom: 15px;
-}
-.footer-content-small {
   height: 67.5px;
+}
+@media (max-width: 768px) {
+  .footer-content-small {
+    height: 120px;
+  }
+}
+@media (max-width: 576px) {
+  .footer-content-small {
+    height: 67.5px;
+  }
+}
+.footer-content-small img {
+  height: 67.5px;
+}
+@media (max-width: 768px) {
+  .footer-content-small img {
+    height: 120px;
+  }
+}
+@media (max-width: 576px) {
+  .footer-content-small img {
+    height: 67.5px;
+  }
 }
 @media (max-width: 576px) {
   .content-img {
