--- a/css/styles.less
+++ b/css/styles.less
@@ -93,7 +93,17 @@ a {
   @media (max-width: 992px){
     width: 100%;
     margin-bottom: 15px;
-
+  }
+  @media (max-width: 576px){
+    padding-right: 15px;
+    background: none;
+  }
+}
+.main-column-left-top-background {
+  @media (max-width: 576px){
+    background: dimgray;
+    width: 100%;
+    height: 250px;
   }
 }
 .main-column-left-bottom {
@@ -103,11 +113,11 @@ a {
   bottom: 0;
   @media (max-width: 992px){
     width: 100%;
-    margin-bottom: 15px;
-    position: relative!important;
   }
   @media(max-width: 576px){
     padding-right: 15px;
+    margin-bottom: 15px;
+    position: relative!important;
   }
 }
 .main-img-container {
@@ -153,12 +163,25 @@ a {
 .footer-content-big {
   height: 150px;
 }
-.footer-container-small {
+.footer-content-small {
   border: red 1px solid;
   margin-bottom: 15px;
-}
-.footer-content-small {
   height: 67.5px;
+  @media (max-width: 768px){
+    height: 120px;
+  }
+    @media (max-width: 576px){
+    height: 67.5px;
+  }
+  img {
+    height: 67.5px;
+     @media (max-width: 768px){
+    height: 120px;
+  }
+    @media (max-width: 576px){
+    height: 67.5px;
+  }
+  }
 }
 .content-img {
   @media (max-width: 576px){
